Commit to Flask folder

--- a/Flask App/templates/teams.html
+++ b/Flask App/templates/teams.html
@@ -24,12 +24,14 @@
           <!-- Dropdown options will be populated dynamically using JavaScript -->
         </select>
         <a href="/">Home</a>
+        <a href="https://public.tableau.com/app/profile/jeremy.mallory/viz/Project_football_clustering_analysis/SatisfactionScores?publish=yes"  style = "margin-left: 20px;">Tableau Dashboard</a>
       </div>
       <div class="table-container">
         <div class="team-table-container">
           <h4>Team Performance Last 10 Seasons</h4>
           <table id="team-table">
             <!-- Table data will be populated dynamically using JavaScript -->
+            
           </table>
         </div>
         <div class="cluster-table-container">
