--- a/Flask App/templates/teams.html
+++ b/Flask App/templates/teams.html
@@ -45,7 +45,7 @@
           <table id="cluster-table" style="margin-bottom: 40px;">
             <!-- Table data will be populated dynamically using JavaScript -->
           </table>
-          <div class="bubble-container"></div>
+          <div id="bubble-container"></div>
           <div id="bubble-chart"></div>
         
         </div>
